# metadate-2

./: .gitignore  .swp  Cargo.toml
public/: style.css
src/: dating_service.rs  main.rs  web.rs
src/public/: kiosk.css  style.css
src/templates/: date.html  input.html  kiosk.html  list.html
templates/: kiosk.ejs
views/: date.ejs  input.ejs
